--- a/feedbackForm.html
+++ b/feedbackForm.html
@@ -57,7 +57,7 @@
     <!-- Complaints or Feedback Form -->
     <div class="form-container">
         <h2 class="text-center mb-4">Feedback Form</h2>
-        <form action="feedbackFormSuccess.html" method="POST">
+        <form action="feedbackFormSuccess.html" method="GET">
             <!-- Name -->
             <div class="mb-3">
                 <label for="name" class="form-label">Your Name</label>
