--- a/requestDocument.html
+++ b/requestDocument.html
@@ -57,7 +57,7 @@
     <!-- Document Request Form -->
     <div class="form-container">
         <h2 class="text-center mb-4">Request a Document</h2>
-        <form action="requestDocumentSuccess.html" method="POST">
+        <form action="requestDocumentSuccess.html" method="GET">
             <!-- Name -->
             <div class="mb-3">
                 <label for="name" class="form-label">Your Name</label>
