--- a/incidentReport.html
+++ b/incidentReport.html
@@ -57,7 +57,7 @@
     <!-- Incident Report Form -->
     <div class="form-container">
         <h2 class="text-center mb-4">Submit Incident Report</h2>
-        <form action="incidentReportSuccess.html" method="POST">
+        <form action="incidentReportSuccess.html" method="GET">
             <!-- Name -->
             <div class="mb-3">
                 <label for="name" class="form-label">Your Name</label>
