--- a/login.html
+++ b/login.html
@@ -39,11 +39,11 @@
         <form action="barangayOfficialHome.html" method="get">
             <div class="mb-3">
                 <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                <input type="email" class="form-control" id="email" placeholder="Enter your email">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                <input type="password" class="form-control" id="password" placeholder="Enter your password">
             </div>
             <div class="text-center mt-4">
                 <a href="index.html" class="btn btn-primary btn-lg">Go Back</a>
