--- a/composeSMSBlast.html
+++ b/composeSMSBlast.html
@@ -63,7 +63,7 @@
         <div class="row justify-content-center jumbotron">
             <div class="col-lg-6">
                 <h1 class="text-center mb-4">Compose SMS Blast</h1>
-                <form action="SMSBlastSuccess.html" method="POST">
+                <form action="SMSBlastSuccess.html" method="GET">
                     <!-- Message Field -->
                     <div class="mb-3">
                         <label for="smsMessage" class="form-label">Message</label>
