--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="welcome-card">
         <h1 class="mb-3">DRAMS</h1>
         <p class="mb-4">Disaster Risk and Assistance Management System</p>
-        <a href="residentHome.html" class="btn btn-primary btn-lg">Browse as Resident</a><br><br>
+        <a href="residentHome.html" class="btn btn-primary btn-lg">Browse as Guest</a><br><br>
         <a href="login.html" class="btn btn-primary btn-lg">Barangay Officials</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
