--- a/registration.html
+++ b/registration.html
@@ -38,7 +38,7 @@
 <body>
     <div class="register-card">
         <h1 class="mb-4 text-center">Sign Up</h1>
-        <form id="registrationForm" action="registrationSuccess.html" method="POST">
+        <form id="registrationForm" action="registrationSuccess.html" method="GET">
             <div class="mb-3">
                 <label for="fullName" class="form-label">Full Name</label>
                 <input type="text" class="form-control" id="fullName" placeholder="Enter your full name" required>
