--- a/registrationSuccess.html
+++ b/registrationSuccess.html
@@ -54,7 +54,7 @@
             // Stop the interval when the countdown reaches 0
             if (countdownValue === 0) {
                 clearInterval(interval);
-                window.location.href = "residentHome.html"; // Redirect to the home page
+                window.location.href = "login.html"; // Redirect to the home page
             }
         }, 1000); // Update every 1 second
     </script>
